# ir-lab-wise-2023

./: .gitignore  LICENSE  README.md  pyproject.toml  pyterrier-bm25.ipynb
