[project]
name = "ir-lab-wise-2023"
requires-python = ">=3.8,<=3.11"
dependencies = [
    "ir-datasets~=0.5.5",
    "ir-measures~=0.3.3",
    "jupyter~=1.0",
    "python-terrier~=0.10.0",
    "tira~=0.0.79",
    "tqdm~=4.66",
]
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["ir_lab"]
